fixed layout issue

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -42,6 +42,10 @@
         .card-content {
             margin: 15px 0;
             padding: 12px;
+            
+            div {
+                padding: 4px 0;
+            }
         }
     }
 }
