--- a/src/app/menu-items/item-details/item-details.component.scss
+++ b/src/app/menu-items/item-details/item-details.component.scss
@@ -19,6 +19,10 @@
         .card-content {
             margin: 15px 0;
             font-size: 15px;
+
+            div {
+                padding: 4px 0;
+            }
         }
 
         .availble {
